--- a/public/style.css
+++ b/public/style.css
@@ -15,16 +15,28 @@ body > div{position:absolute;top:0;width:100%;height:100%;}
 header{height:2rem;}
 header > .logo{width:2rem;height:2rem;}
 article{margin-top:2rem;height:calc(100% - 2rem);overflow:scroll;}
-#date{height:2rem;font-size:0.8rem;}
+#date{font-size:0.8rem;position:absolute;top:0;bottom:0;left:0;right:0;}
 #date > ul{height:1rem;margin:0;width:100%;list-style:none;padding:0;display:block;}
-#date > ul > li{height:1rem;width:1.5rem;border-right:1px solid black;display:block;float:left;text-align:center;box-sizing:border-box;}
-#tasks > div{background-color:#eee;height:1.5rem;border-radius:0.5rem;/*overflow:hidden;*/position:relative;}
+#date > ul#day{height:calc(100% - 1rem);}
+#date > ul > li{height:100%;width:1.5rem;border-right:1px solid black;display:block;float:left;text-align:center;box-sizing:border-box;}
+#tasks{margin-top:2.5rem;}
+#tasks > div{background-color:#eee;height:1.5rem;border-radius:0.5rem;/*overflow:hidden;*/position:relative;margin:0.5rem 0;}
 #tasks > div.open{height:auto;}
 #tasks > div > h3{padding:0;font-size:1rem;margin:0 1.5rem 0 0.5rem;display:block;}
 #tasks > div > h3 > input{width:100%;height:1.5rem;background-color:transparent;margin:0;padding:0;font-size:1rem;display:block;border:0;}
-#tasks > div > h3 > input[readonly]{cursor:move;}
+#tasks > div > h3 > input[readonly]{cursor:inherit;}
+#tasks > div > h3 > input[readonly][draggable]{cursor:move;}
 #tasks > div > h3 > .toggleOpen{border:0.1rem solid gray;font-size:0.5rem;width:1rem;height:1rem;margin:0.25rem 0;top:0;right:0.5rem;border-radius:0.2rem;text-align:center;display:block;position:absolute;box-sizing:border-box;cursor:pointer;}
 #tasks > div > h3 > .toggleOpen:after{content:'▼';}
 #tasks > div.open > h3 > .toggleOpen:after{content:'▲';}
 #tasks > div > h3 > .grip{width:0.5rem;height:100%;top:0;right:0;display:block;position:absolute;box-sizing:border-box;cursor:e-resize;}
 .grip:before,.grip:after{background-color:#bbb;width:0.1rem;height:0.9rem;content:'';display:block;margin:0.3rem 0 0.3rem 0.1rem;float:left;}
+#tasks > div > div{overflow:hidden;height:0;}
+#tasks > div.open > div{height:auto;}
+#tasks > div > div > ul{height:1.5rem;display:block;list-style:none;margin:0;padding:0;overflow:hidden;position:relative;}
+#tasks > div > div > ul > li{width:1.5rem;height:1.5rem;display:block;float:left;margin:0;padding:0;}
+#tasks > div > div > ul > li:first-child{position:absolute;left:0;z-index:1;pointer-events:none;}
+#tasks > div > div:last-child{height:1rem;}
+.week0,.holiday{background-color:#ffe4e1;}
+.week6{background-color:#e0ffff;}
+.today{background-color:#ffffe0;}
